# opotion-123

./: .gitignore  .replit  README.md  app.py  config.py  db_migrate.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py  test_app.py  test_ccxt.py  test_ccxt_options.py  test_db.py  test_exchange_api.py  test_risk_service.py  translations.py
services/: alert_service.py  data_service.py  deviation_monitor_service.py  exchange_api.py  exchange_api_ccxt.py  mock_data.py  risk_calculator.py  risk_service.py  scheduler.py  scheduler_service.py
static/css/: custom.css
static/js/: chart_utils.js  charts.js  dashboard.js  deviation_monitor.js  main.js  scenario.js
temp_backup/: db_migrate_exchange.py  db_migrate_exchange_column.py  routes.py
temp_backup/services/: exchange_api_ccxt.py  risk_calculator.py  scheduler.py
temp_backup/static/js/: dashboard.js  deviation_monitor.js
temp_backup/temp_backup/: config.py  db_migrate_time_periods.py  migrate_db.py
temp_backup/templates/: deviation_monitor.html
templates/: 404.html  500.html  alerts.html  dashboard.html  deviation_monitor.html  historical.html  layout.html  pcr_analysis.html  scenario.html  settings.html
utils/: error_handlers.py  logging_config.py  rate_limiter.py
