
[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "bootstrap-flask>=2.5.0",
    "email-validator>=2.2.0",
    "flask-apscheduler>=1.13.1",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.1",
    "gunicorn>=23.0.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "scipy>=1.15.2",
    "flask-login>=0.6.3",
    "sqlalchemy>=2.0.40",
    "trafilatura>=2.0.0",
    "websocket-client>=1.8.0",
    "requests>=2.32.3",
    "ccxt>=4.4.78",
]
